<resources>
    <string name="app_name">MagicMirror</string>
    <string name="item_browse_last_first_title_tv">购买咨询</string>
    <string name="item_detail_browse_last_content_purchase_consult_content_tv">如果您对把巴拉巴拉啦啦啦啦啦啦啦啦啦啦了哈哈哈哈哈哈吼吼吼的合法</string>
    <string name="item_detail_browse_last_content_about_return_title_tv">关于退货</string>
    <string name="item_detail_browse_last_content_purchase_consult_tract_order__tv">如果您对把巴拉巴拉啦啦啦啦啦啦啦啦啦啦了哈哈哈哈哈哈吼吼吼的合法</string>
    <string name="item_detail_browse_last_content_tract_order_title_tv">订单追踪</string>
    <string name="item_detail_browse_last_content_purchase_about_return_iv">如果您对把巴拉巴拉啦啦啦啦啦啦啦啦啦啦了哈哈哈哈哈哈吼吼吼的合法</string>
    <string name="activity_main_login_tv">登録</string>
    <string name="fragment_goods_title_tv">瀏覽所有分類</string>
    <string name="fragment_goods_show_tv">顯示排序爲 最新推薦</string>
    <string name="fragment_shoppingcart_title_tv">我的購物車</string>
    <string name="fragment_shoppingcart_show_tv">顯示排序爲 最新推薦</string>
    <string name="fragment_shoppingcart_nothings_tv">您的購物車裹没有商品</string>
    <string name="fragment_themtaic_title_tv">專题分享</string>
    <string name="fragment_themtaic_show_tv">顯示排序爲 最新推薦</string>
    <string name="item_detail_browse_glasses_rv_head_first_e_title_tv_content">english</string>
    <string name="item_detail_brose_glasses_rv_head_first_etitle_content">太阳镜</string>
    <string name="item_detail_brose_glasses_rv_head_first_content_tv_content">巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴巴拉巴拉巴</string>
    <string name="item_detail_brose_glasses_rv_title_tv_content">巴拉巴拉</string>
    <string name="fragment_palingglasses_title_tv">浏览平光镜</string>
    <string name="fragment_sunglasses_title_tv">浏览太阳镜</string>
    <string name="fragment_discount_title_tv">折扣专区</string>
    <string name="fragment_menu_themtaic_title_tv">專题分享</string>
    <string name="fragment_menu_shoppingcart_title_tv">我的購物車</string>
    <string name="token">token</string>
    <string name="device_type">device_type</string>
    <string name="page">page</string>
    <string name="last_time">last_time</string>
    <string name="category_id">category_id</string>
    <string name="version">version</string>
    <string name="one">1</string>
    <string name="stroy_id">story_id</string>
    <string name="one_point_zero_point_one">1.0.1</string>
    <string name="fragment_mune_popupwindow_gohome">返回首页</string>
    <string name="gohome_tv">返回首页</string>
    <string name="loginout_tv">退出</string>
    <string name="story_uid">story_uid</string>
    <string name="activity_login_account_login">账号登录</string>
    <string name="activity_login_phone_number_text">手机号</string>
    <string name="activity_login_password_tv_text">密码</string>
    <string name="activity_login_forget_password_tv">忘记密码？</string>
    <string name="activity_login_btn_text">登录</string>
    <string name="activity_login_create_account_btn">创建账号</string>
    <string name="activity_login_use_social_contact">使用社交账号</string>
    <string name="CHECKEDPOSITION">checkedPosition</string>
    <string name="MENUTITLE">menutitle</string>
    <string name="MENU">menu</string>
    <string name="goods_detail_show">商品细节展示</string>
    <string name="activity_detail_browse_glasses_pictures_tv_text">佩戴图集</string>
    <string name="activity_register_tv">創建賬號</string>
    <string name="activity_register_phonenumber_tv">手機號</string>
    <string name="activity_register_sendcode_tv">驗證碼</string>
    <string name="activity_register_sendcode_btn_tv">發送驗證碼</string>
    <string name="activity_register_setpassword_tv">設置密碼</string>
    <string name="activity_register_setpassword_btn_tv">創建賬號</string>
    <string name="please_write_your_phone_number">請輸入手機號</string>
    <string name="phone_number">phone number</string>
    <string name="please_write_your_code">請輸入驗證碼</string>
    <string name="register_success">注册成功</string>
    <string name="uid">uid</string>
    <string name="intent_phonenumber">phonenumber</string>
    <string name="was_registered">此号码已被注册</string>
    <string name="item_detail_brose_glasses_rv_head_first_down_pull_tv_content">下拉浏览详情</string>
    <string name="shopping_cart">購物車</string>
    <string name="shoppingcart">購物車</string>
    <string name="please_write_your_username_and_password">請輸入用戶名和密碼</string>
    <string name="password">password</string>
    <string name="phonenumber">phonenumber</string>
    <string name="please_write_yourpassword">請輸入密碼</string>
    <string name="is_login_out_magic_mirror">是否退出MagicMirror登錄</string>
    <string name="sure">確定</string>
    <string name="cancle">取消</string>
    <string name="please_login">请先登录</string>
    <string name="activity_orderdetail_tv">購買詳情</string>
    <string name="activity_orderdetail_add_address_rl_tv">请填写收件人信息</string>
    <string name="activity_orderdetail_add_address_click_tv">更改地址</string>
    <string name="activity_orderdetail_btn_btn">确认下单</string>
    <string name="goods_id">goods_id</string>
    <string name="goods_num">goods_num</string>
    <string name="price">price</string>
    <string name="discout_id">discout_id</string>
    <string name="activity_address_detail_title_content">我的所有地址</string>
    <string name="activity_address_detail_add_tv_content">添加地址</string>
    <string name="activity_orderdetail_sure_dialog_choose_tv">选择支付方式</string>
    <string name="activity_orderdetail_sure_dialog_wechat_tv">微信支付</string>
    <string name="activity_orderdetail_sure_dialog_zfb_tv">支付宝支付</string>
    <string name="addr_id">addr_id</string>
    <string name="netFailedToast">网络不好请稍等</string>
    <string name="goods_name">goodsname</string>
    <string name="order_no">order_no</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_wait">支付结果确认中</string>
    <string name="adress">"地址:  "</string>
    <string name="name">"收件人:  "</string>
    <string name="cellnumber">"电话:  "</string>
    <string name="log_class">类</string>
    <string name="log_method">的方法中执行：</string>
    <string name="change_address">更改地址</string>
    <string name="add_address">请添加收货地址</string>
    <string name="has_register">此手机号已被注册</string>
    <string name="wrong_code">验证码错误</string>
    <string name="no_register">此手机号未注册</string>
    <string name="welcome">welcome</string>
    <string name="item_address_detail_address_item_del_tv">删除</string>
    <string name="send_again">秒后重新发送</string>
    <string name="send_code">重新发送</string>
    <string name="com.qoo.magicmirror.NET_COMING">com.qoo.magicmirror.NET_COMING</string>
    <string name="two">2</string>
    <string name="one_zero_one">1.0.1</string>
    <string name="categoryId">categoryId</string>
    <string name="hasNet">hasNet</string>
    <string name="netcome">网络来了</string>
    <string name="success">success</string>
    <string name="themtaictitle">themtaictitle</string>
    <string name="number">number</string>
    <string name="username">username</string>
    <string name="cellphone">cellphone</string>
    <string name="addr_info">addr_info</string>
    <string name="format_is_not_right">格式不正确</string>
    <string name="oldAddress">oldAddress</string>
    <string name="change_fauiled">修改失败请稍后再试</string>
    <string name="goodsId">goodsId</string>
    <string name="addressData">addressData</string>
    <string name="MMDDHHmmss">MMddHHmmss</string>
    <string name="url">url</string>
    <string name="check_net_try_again">检查网络连接后重试</string>
    <string name="img">/img</string>
    <string name="com_qoo_magicmirror_net_coming">com.qoo.magicmirror.NET_COMING</string>
    <string name="callphone">cellphone</string>
    <string name="addr_indo">addr_info</string>
    <string name="activity_address_detail_title_tv">添加收货地址</string>
    <string name="share_goods">我是分享宝贝</string>

</resources>
