<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_orderdetail_sure_dialog_title_rl">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_orderdetail_sure_dialog_choose_tv"
            android:textColor="@color/colorLight_Black"
            android:textSize="@dimen/activity_orderdetail_sure_dialog_choose_tv_textSize"
            android:layout_centerInParent="true"/>
        
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_orderdetail_sure_dialog_line"
        android:background="@color/gray"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/activity_orderdetail_sure_dialog_choose_btn_rl">

        <RelativeLayout
            android:id="@+id/activity_orderdetail_sure_dialog_wechat_rl"
            android:layout_gravity="center"
            android:layout_width="@dimen/activity_orderdetail_sure_dialog_wechat_rl_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_login_btn"
            android:layout_marginTop="@dimen/activity_orderdetail_sure_dialog_wechat_rl_marginTop">

        <TextView
            android:id="@+id/wechat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_orderdetail_sure_dialog_wechat_tv"
            android:textSize="@dimen/activity_orderdetail_sure_dialog_wechat_tv_textSize"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/wechat_pay_icon"
                android:layout_toLeftOf="@+id/wechat_tv"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_orderdetail_sure_dialog_wechat_iv_marginRight"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_orderdetail_sure_dialog_zfb_rl"
            android:layout_gravity="center"
            android:layout_width="@dimen/activity_orderdetail_sure_dialog_zfb_rl_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_login_btn"
            android:layout_marginTop="@dimen/activity_orderdetail_sure_dialog_zfb_rl_marginTop">

            <TextView
                android:id="@+id/zfb_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_orderdetail_sure_dialog_zfb_tv"
                android:textSize="@dimen/activity_orderdetail_sure_dialog_zfb_tv_textSize"
                android:textColor="@color/colorWhite"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zfb_payicon"
                android:layout_toLeftOf="@+id/zfb_tv"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_orderdetail_sure_dialog_zfb_iv_marginRight"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>